debug_output.txt
XML content read successfully
Root tag: full-text-retrieval-response
Namespaces: {}
Coredata found: True
An error occurred: prefix 'prism' not found in prefix map
Traceback (most recent call last):
  File "src\\lxml\\_elementpath.py", line 84, in lxml._elementpath.xpath_tokenizer
KeyError

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\ravit\Documents\Cerium_Oxide_Mining\Clarkson-CMP-Text-Mining\extract_elsevier_xml.py", line 75, in main
    json_data = extract_elsevier_xml(xml_content)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ravit\Documents\Cerium_Oxide_Mining\Clarkson-CMP-Text-Mining\extract_elsevier_xml.py", line 20, in extract_elsevier_xml
    journal = coredata.find('prism:publicationName', namespaces) if coredata is not None else None
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "src\\lxml\\etree.pyx", line 1573, in lxml.etree._Element.find
  File "src\\lxml\\_elementpath.py", line 319, in lxml._elementpath.find
  File "src\\lxml\\_elementpath.py", line 308, in lxml._elementpath.iterfind
  File "src\\lxml\\_elementpath.py", line 285, in lxml._elementpath._build_path_iterator
  File "src\\lxml\\_elementpath.py", line 87, in xpath_tokenizer
SyntaxError: prefix 'prism' not found in prefix map
